def mainPackage = "net.sourceforge.pdfjumbler"
def mainClass = "${mainPackage}.PdfJumbler"

apply plugin: "java"
apply plugin: "idea"

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

defaultTasks "jar"

repositories {
	mavenCentral()
}

sourceSets {
	main
}

dependencies {
	compile 'org.tinylog:tinylog-api:2.1.2'
	compile 'org.tinylog:tinylog-impl:2.1.2'
	compile 'org.apache.pdfbox:pdfbox:2.0.21'
	implementation 'at.swimmesberger:swingx-plaf:1.6.8'
	implementation 'com.twelvemonkeys.imageio:imageio:3.6'
	implementation 'com.twelvemonkeys.imageio:imageio-batik:3.6'
	implementation 'org.apache.xmlgraphics:batik-transcoder:1.13'
}

jar {
	dependsOn classes
	
	archiveFileName = "pdfjumbler.jar"
	
	manifest {
		attributes(
			"Main-Class": mainClass
		)
	}
	
	from sourceSets.main.output

	from {
		configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
	}
	
	exclude "META-INF/*.SF"
	exclude "META-INF/*.DSA"
	exclude "META-INF/*.RSA"
}